--- a/style.css
+++ b/style.css
@@ -7,20 +7,39 @@ body {
 }
 .movie-container{
     display: block;
-    box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
-    background-color:rgb(161, 175, 189);
 }
 .movie-generator {
     margin:auto;
-    text-align: center;
+    box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
+    background-color:rgb(161, 175, 189);
+    padding: 40px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
+    margin-left: 20%;
 }
 .movie-title{
     text-shadow: 1px 1px rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
+.movie-block{
+    width:80%;
+}
+.button-div{
+    margin:auto;
+    position: relative;
+    text-align: center;
+}
+.post-new{
+    background-color: white;
+    padding-left: 20px;
+}
 p{
     color:white;
     text-align: left;
+}
+h1{
+    text-align:center;
 }
 h2 {
     text-shadow: 1px 1px black;
@@ -34,52 +53,24 @@ h3{
     text-align: left;
 }
 .poster{
-    width: 40%;
+    width: 60%;
     margin-bottom: -24px;
     float: left;
     margin: 20px;
 }
-.movie-block{
-   padding-top: 20px;
-    padding-bottom: 10px;
-    margin-bottom: 100px;
-    margin-left: 20%;
-    width: 60%;
-    
-}
-
-
 
 .buttons {
     position: relative;
-    padding: 5 px;
     display: flex;
     justify-content: center;
 }
 
-#likeNumber {
-    width: 50px;
-    background: none;
-    border:none;
-    margin: 0 10px;
-    pointer-events: none;
-    color: rgb(1, 85, 1)
-}
-#dislikeNumber{
-    width: 50px;
-    background: none;
-    margin: 0 10px;
-    pointer-events: none;
-    border: none;
-    color: rgb(150, 0, 0)
-}
 .post-container{
     width:100px;
     align-items: center;
     position: relative;
     text-align: center;
     margin:auto;
-    padding: 20px;
 }
 
 
@@ -101,35 +92,9 @@ h3{
     
 }
 
-#name{
-    margin-bottom: 10px;
-    margin-top: 10px;
-    align-items: center;
-
-}
 #review-box{
     margin-bottom: 10px;
     width: 100px;
-}
-/* Movies CSS */
-.movie-review{
-    background-color: white;
-    background-image: linear-gradient(to , lightblue 20%, white 100%);
-    /* background-image: linear-gradient(to right, lightblue 20%, white 100%); */
-    text-align:center;
-    padding-top: 100px;
-
-}
-.newPost {
-    text-align: left;
-    background-color: rgb(228, 227, 227);
-    width: 50%;
-    margin-left: 25%;
-    margin-bottom: 25%;
-    padding-left: 20px;
-    border-bottom: white;
-    border-width: 20px;
-    
 }
 
 
@@ -156,6 +121,14 @@ h3{
     width: 25px;
     height:25px;
 }
-.post-new{
-    color:black
+.like-button{
+    font-size:15px;
+    width:60px;
+    margin: 20px;
+    color:black;
+}
+.dislike-button{
+    font-size: 15px;
+    width:60px;
+    color:black;
 }
