--- a/style.css
+++ b/style.css
@@ -1,9 +1,91 @@
 /* Body CSS - Main CSS */
-body {
+/* body {
     background-color: rgb(255, 255, 255);
     margin: 5% 10%;
     border: rgb(255, 255, 255);
     border-width: 10px;
+} */
+.navbar{
+    background:rgb(109, 106, 106);
+    height:100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+#title-logo{
+    background-color: #ff9999;
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color:transparent;
+    display:flex;
+    align-items:center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 4rem;
+}
+.navbar-menu{
+    display:flex;
+    align-items: center;
+    list-style: none;
+}
+.navbar-items{
+    height:80px;
+}
+.navbar-link{
+    color:#fff;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width: 125px;
+    text-decoration: none;
+    height: 100%;
+}
+.navbar-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    width: 100%;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border:none;
+    outline:none;
+    border-radius: 4px;
+    background:#833ab4;
+    background: -webkit-linear-gradient(to right, #fcb045, red, #833ab4);
+    background: linear-gradient(to right, #fcb045, red, #833ab4);
+    color: #fff;
+    transition: all 0.3s ease;
+
+}
+.narbar-link:hover {
+    color:#833ab4;
+    transition: all 0.3s ease;
 }
 .movie-container{
     display: block;
@@ -76,21 +158,7 @@ h3{
 
 
 /* Logo CSS */
-.title {
-    text-align: center;
-    color:rgb(161, 175, 189);
-    text-decoration: underline;
-    /* -webkit-text-stroke-width: 1px; */
-    /* -webkit-text-stroke-color: burlywood; */
-    position: relative;
-    align-content: center;
-    margin-top: -100px;
-    padding-bottom: 50px;
-    text-shadow: 2px 2px rgb(118, 205, 255);
-    font-size: 50px;
-    
-    
-}
+
 
 #review-box{
     margin-bottom: 10px;
@@ -99,28 +167,8 @@ h3{
 
 
 /* Images CSS */
-#first_movie_image{
-    width: 35%;
-    height: 35%;
-}
 
-#filmRoll{
-    background: transparent;
-    width:15%;
-    height:15%;
-    margin-left: 80%;
-    
-}
 
-#thumbsUpPic{
-    width: 25px;
-    height: 25px;
-    border:none;
-}
-#thumbsDownPic{
-    width: 25px;
-    height:25px;
-}
 .like-button{
     font-size:15px;
     width:60px;
