--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
-/* Body CSS - Main CSS */
-/* body {
-    background-color: rgb(255, 255, 255);
-    margin: 5% 10%;
-    border: rgb(255, 255, 255);
-    border-width: 10px;
-} */
+/* Navigation Bar CSS */
 .navbar{
     background:rgb(109, 106, 106);
-    height:100px;
+    height:80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,8 +21,10 @@
     padding: 0 50px;
 }
 #title-logo{
-    background-color: #ff9999;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background: #8E0E00;
+    background: -webkit-linear-gradient(to right, #1F1C18, #8E0E00); 
+    background: linear-gradient(to right, #1F1C18, #8E0E00); 
+    
     background-size: 100%;
     background-clip: text;
     -webkit-background-clip: text;
@@ -39,7 +35,7 @@
     align-items:center;
     cursor: pointer;
     text-decoration: none;
-    font-size: 4rem;
+    font-size: 3rem;
 }
 .navbar-menu{
     display:flex;
@@ -65,7 +61,7 @@
     padding: 0 1rem;
     width: 100%;
 }
-.button{
+.button-nav{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,9 +72,10 @@
     border:none;
     outline:none;
     border-radius: 4px;
-    background:#833ab4;
-    background: -webkit-linear-gradient(to right, #fcb045, red, #833ab4);
-    background: linear-gradient(to right, #fcb045, red, #833ab4);
+    background: #c31432;  
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  
+    background: linear-gradient(to right, #240b36, #c31432); 
+    
     color: #fff;
     transition: all 0.3s ease;
 
@@ -87,34 +84,54 @@
     color:#833ab4;
     transition: all 0.3s ease;
 }
+
+
+/* Movie Generator CSS */
 .movie-container{
     display: block;
+    width: 100%;
 }
 .movie-generator {
     margin:auto;
     box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
-    background-color:rgb(161, 175, 189);
+    background:rgb(109, 106, 106);
     padding: 40px;
     padding-top: 20px;
     padding-bottom: 10px;
     margin-bottom: 100px;
-    margin-left: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
+
 .movie-title{
-    text-shadow: 1px 1px rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    background: #7F7FD5;
+    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5); 
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color:transparent;
 }
 .movie-block{
-    width:80%;
+    width:100%;
+    margin: 50px;
+
 }
 .button-div{
     margin:auto;
     position: relative;
     text-align: center;
 }
+.post-div{
+    background-color:rgb(255, 255, 255)
+
+}
 .post-new{
-    background-color: white;
+    /* background-color: white; */
     padding-left: 20px;
+    color:black;
 }
 p{
     color:white;
@@ -135,16 +152,9 @@ h3{
     text-align: left;
 }
 .poster{
-    width: 60%;
-    margin-bottom: -24px;
+    width: 40%;
     float: left;
     margin: 20px;
-}
-
-.buttons {
-    position: relative;
-    display: flex;
-    justify-content: center;
 }
 
 .post-container{
@@ -154,21 +164,18 @@ h3{
     text-align: center;
     margin:auto;
 }
-
-
-
-/* Logo CSS */
-
-
-#review-box{
-    margin-bottom: 10px;
-    width: 100px;
+.name{
+    width: 50%;
+    position: relative;
+    align-items: center;
+    margin: 20px;
+}
+.post{
+    width: 50%;
 }
 
 
-/* Images CSS */
-
-
+/* Button CSS */
 .like-button{
     font-size:15px;
     width:60px;
@@ -179,4 +186,21 @@ h3{
     font-size: 15px;
     width:60px;
     color:black;
+}
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border:none;
+    outline:none;
+    border-radius: 4px;
+}
+.submit-button{
+    margin-left: 490px;
+    margin-top: 20px;
+    /* width:50%; */
 }
